force-app/main/default/objects/Blog_Entry__c/Blog_Entry__c.object-meta.xml
<CustomObject>
    <label>Blog Entry</label>
    <nameField>
        <displayFormat>B-{00}</displayFormat>
        <label>Blog Entry No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blog_Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>