force-app/main/default/objects/Blog_Entry__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Author</label>
    <length>25</length>
    <type>Text</type>
</CustomField>