force-app/main/default/objects/Blog_Entry__c/fields/WordPress__c.field-meta.xml
<CustomField>
    <fullName>WordPress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WordPress</label>
    <type>TextArea</type>
</CustomField>